--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import "../assets/main.css";
+import Header from "../components/Header.astro";
 
 ---
 
@@ -11,6 +13,9 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<Header />
+
+		<div class="banner"></div>
+		<div class="content js-content"></div>
 	</body>
 </html>
